--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet">
     </head>
     <body>
-        민정 테스트
+        
     </body>
 </html>
