--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet">
+        <link rel="stylesheet" href="indexBackground.css">
     </head>
     <body>
-        민정 다시 테스트
+        <div id="gameStartTitle"> <p>GIVE ME MY SAND</p></div>
+       <div style="vertical-align: middle;">
+            <div id="gameButtons">
+                <button id="gamestart" class="gameButtons">게임 시작</button>
+                <button id="How to play" class="gameButtons">게임 방법</button>
+            </div>
+       </div>
     </body>
 </html>
