--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     </head>
     <body>
         <div id="gameStartTitle"> <p>GIVE ME MY SAND</p></div>
-       <div style="vertical-align: middle;">
+       <div style="vertical-align: middle; float: right; width: 10pc;">
             <div id="gameButtons">
                 <button id="gamestart" class="gameButtons">게임 시작</button>
-                <button id="How to play" class="gameButtons">게임 방법</button>
+                <br>
+                <button id="How_to_play" class="gameButtons">게임 방법</button>
             </div>
        </div>
     </body>
