--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <link rel="stylesheet" href="indexBackground.css">
+        <title>GIVE ME MY SAND</title>
     </head>
     <body>
+        <div><img id="mainstore" src="mainstore.png"></div>
         <div id="gameStartTitle"> <p>GIVE ME MY SAND</p></div>
-       <div style="vertical-align: middle; float: right; width: 10pc;">
+       <div id="buttonlist">
             <div id="gameButtons">
                 <button id="gamestart" class="gameButtons">게임 시작</button>
                 <br>
