11/28 수정 전 백업

--- a/game.html
+++ b/game.html
@@ -148,34 +148,41 @@
             switch(menu_rand){
                 case 1: {
                     max_stack = 5;
+                    setTimeout(alert("종료되었습니다."), 8000);
                     break;
                 }
                 case 2: {
                     max_stack = 5;
+                    setTimeout(alert("종료되었습니다."), 8000);
                     break;
                 }
                 case 3: {
                     max_stack = 5;
+                    setTimeout(alert("종료되었습니다."), 8000);
                     break;
                 }
                 case 4: {
                     max_stack = 5;
+                    setTimeout(alert("종료되었습니다."), 8000);
                     break;
                 }
                 case 5: {
                     max_stack = 5;
+                    setTimeout(alert("종료되었습니다."), 8000);
                     break;
                 }
                 case 6: {
                     max_stack = 9;
+                    setTimeout(alert("종료되었습니다."), 8000);
                     break;
                 }
                 case 7: {
                     max_stack = 4;
+                    setTimeout(alert("종료되었습니다."), 8000);
                     break;
                 }
             }
-            // ClearSandwich(max_stack);
+            ClearSandwich(max_stack);
         //}
 
         // 샌드위치 쌓기 단계 함수
