(민정) 11/29 소스 백업

--- a/JS_PRO/CSS_Test.html
+++ b/JS_PRO/CSS_Test.html
@@ -21,37 +21,42 @@
 </head>
 
 <body>
-    <div class="GameBackground"></div>
+    <div class="GameBackground">
+
+    <div class="customer">
+        <img id="customerImage" onclick="setCustomer()" src="./img/customer_cat_1.png">
+    </div>
+
+    <div class="orderBox">
+        <img id="orderBoxImage" src="./img/orderBox.png">
+    </div>
    
-    <div id="step1"> <img id=1> </div>
+    <div class="step">
+        <div id="step1"> <img id=1> </div>
 
-    <div id="step2"> <img id=2> </div>
+        <div id="step2"> <img id=2> </div>
 
-    <div id="step3"> <img id=3> </div>
+        <div id="step3"> <img id=3> </div>
 
-    <div id="step4"> <img id=4> </div>
+        <div id="step4"> <img id=4> </div>
 
-    <div id="step5"> <img id=5> </div>
+        <div id="step5"> <img id=5> </div>
 
-    <div id="step6"> <img id=6> </div>
+        <div id="step6"> <img id=6> </div>
 
-    <div id="step7"> <img id=7> </div>
+        <div id="step7"> <img id=7> </div>
 
-    <div id="step8"> <img id=8> </div>
+        <div id="step8"> <img id=8> </div>
 
-    <div id="step9"> <img id=9> </div>
+        <div id="step9"> <img id=9> </div>
 
-    <div id="step10"> <img id=10> </div>
-
+        <div id="step10"> <img id=10> </div>
+    </div>
 
     <div class="order_Sandwich">
         <img id="order_sand" onclick="setOrder()">
     </div>
-
-    <div id="customer">
-        <img id="customerImage" onclick="setCustomer()" src="./img/customer_cat_1.png">
-    </div>
-
+<!--
 
     <div id="ketchupImg">
         <img id="ketchup" onclick="stackMaterial('./img/stackKetchup.png', this.id)" src="./img/ketchup.png">
@@ -108,15 +113,7 @@
     <div id="topBreadImg">
         <img id="topbread" onclick="stackMaterial('./img/bread.png',this.id)" src="./img/bread.png">
     </div>
-
-    <!--
-        1. 햄 치즈 양배추 토마토 케챱 
-        2. 햄 치즈 딸기잼 베이컨 샐러드
-        3. 소시지 피클 마요네즈 양배추 토마토
-        4. 베이컨 치즈 적양파 토마토 마요네즈
-        5. 햄 양배추 샐러드 피클 케챱
-        6. 햄 치즈 양배추 토마토 마요네즈 베이컨 적양파 피클 샐러드
-        7. 치킨 토마토 양상추 마요네즈
-    -->
+-->
+</div>
 </body>
 </html>
