--- a/JS_PRO/MainGame.html
+++ b/JS_PRO/MainGame.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <!--<link rel="stylesheet" href="css/MainGame.css">-->
+    <link rel="stylesheet" href="css/MainGame.css">
     <style>
         div{
             width: 500px;
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="GameBackground"></div>
+    <div class="GameBackground">
    
     <div id="step1"> <img id=1> </div>
 
@@ -107,6 +107,9 @@
     <div id="topBreadImg">
         <img id="topbread" onclick="stackMaterial('./img/bread.png',this.id)" src="./img/bread.png">
     </div>
+
+
+</div>
 
     <!--
         1. 햄 치즈 양배추 토마토 케챱 
