--- a/JS_PRO/GameEnd.html
+++ b/JS_PRO/GameEnd.html
@@ -2,15 +2,28 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <style>
-             body {
-                background-image:url('./img/GameBackground.png') ;
-                background-size: 1920px 1200px;
-             }
-        </style>
+        <link rel="stylesheet" href="css/GameEnd.css">
     </head>
 
     <body>
-        
+        <div id="GameEnd">
+
+            <div id="background">
+                <div id="text1">게임 종료</div>
+                <div id="text2">0원</div>
+                <img id="cat" src="./img/magic_cat.png">
+                <div id="backMain">
+                    <img id="back" src="./img/BackMain.png" onclick="location.href='index.html'">
+                </div>
+            </div>
+        </div>
+
+        <script>
+            if(localStorage.getItem('userMoney')){ 
+                var user_Money = localStorage.getItem('userMoney') 
+            }
+            document.getElementById("text2").innerText = user_Money+"원";
+        </script>
+
     </body>
 </html>
