(민정) 11/30 프로젝트 마감 (소스 백업)

--- a/JS_PRO/MainGame.html
+++ b/JS_PRO/MainGame.html
@@ -21,7 +21,7 @@
         <img id="order_text_cat" src="./img/order_text_cat.png">
     
         <div class="order_Sandwich">
-            <img id="orderSandwich" src="./img/Transparent.png">>
+            <img id="orderSandwich" src="./img/Transparent.png">
         </div>
 
         <div class="hint">
