--- a/JS_PRO/GameTutorial.html
+++ b/JS_PRO/GameTutorial.html
@@ -21,153 +21,174 @@
                 <div data-aos="fade-down" id="gameTutorial" class="card">
                     <h2>게임 방법</h2>
                     <br>
-                    <P>마녀의 샌드위치 가게에 오신걸 환영합니다!!</P>
+                    <P>마녀의 샌드위치 가게에 오신걸 환영합니다!</P>
                     <br>
-                    <P>우리 마녀 샌드위치 게임을 즐기시는 법은?</P>
-                    <br>
-                    <P>1. 고양이 손님이 원하는 샌드위치를 짧은 시간동안 보여줍니다!</P>
-                    <P>2. 외운 메뉴를 가지고 고양이 손님이 준 힌트를 가지고 재료를 눌러줍니다!</P>
-                    <p>3. 재료가 다 쌓이면 빵을 한번 더 눌러주세요!</p>
-                    <p>4. 맞게 쌓이면 돈을 법니다! 참고로 재료는 9단계까지만 눌러주세요!</p>
-                    <p>5. 힌트는 총 세번 사용 가능하시고, 1초간 샌드위치의 모습을 보여줍니다!</p>
+                    <P>1. 고양이 손님이 원하는 샌드위치를 주문합니다!</P>
+                    <P>2. 재료를 클릭해 레시피대로 샌드위치를 만들어주세요!</P>
+                    <p>3. 재료를 전부 쌓으면 빵을 꼭 한번 눌러주세요!</p>
+                    <p>4. 제조가 알맞게 되었을 시 돈을 얻게됩니다! (참고로 재료는 9개까지만 쌓기 가능)</p>
+                    <p>5. 힌트는 총 세번 사용 가능, 1초간 샌드위치의 재료와 순서를 보여줍니다!</p>
                 </div>
-                <h2 data-aos="fade-down" id="menu_title_card">재료</h2>
+                <h2 data-aos="fade-down" id="menu_title_card">재료 소개</h2>
                 <div data-aos="fade-down" class="ingdiv">
                     <div class="card" style="float: left;">
                         <br>
                         <P>햄</P>
-                        <img src="img/hem.png">
+                        <img src="img/hem.png" style="margin-left: 70px;">
                     </div>
                     <div class="card" style="float: right;">
                         <br>
                         <P>베이컨</P>
-                        <img src="img/bacon.png">
+                        <img src="img/bacon.png" style="margin-left: 70px;">
                     </div>
                 </div>
                 <div data-aos="fade-down" class="ingdiv">
                     <div data-aos="fade-down" id="hem_chi_yang" class="card" style="float: left;">
                         <br>
                         <P>소시지</P>
-                        <img src="img/sausage.png">
+                        <img src="img/sausage.png" style="margin-left: 70px;">
                     </div>
                     <div data-aos="fade-down" id="hem_chi_yang" class="card" style="float: right;">
                         <br>
                         <P>치즈</P>
-                        <img src="img/Cheese.png">
+                        <img src="img/Cheese.png" style="margin-left: 70px;">
                     </div>
                 </div>
                 <div data-aos="fade-down" class="ingdiv">
                     <div data-aos="fade-down" id="hem_chi_yang" class="card" style="float: left;">
                         <br>
                         <P>양배추</P>
-                        <img src="img/lettuce.png">
+                        <img src="img/lettuce.png" style="margin-left: 70px;">
                     </div>
                     <div data-aos="fade-down" id="hem_chi_yang" class="card" style="float: right;">
                         <br>
                         <P>토마토</P>
-                        <img src="img/tomato.png">
+                        <img src="img/tomato.png" style="margin-left: 70px;">
                     </div>
                 </div>
                 <div data-aos="fade-down" class="ingdiv">
                     <div data-aos="fade-down" id="hem_chi_yang" class="card" style="float: left;">
                         <br>
                         <P>적양파</P>
-                        <img src="img/redonion.png">
+                        <img src="img/redonion.png" style="margin-left: 70px;">
                     </div>
                     <div data-aos="fade-down" id="hem_chi_yang" class="card" style="float: right;">
                         <br>
                         <P>피클</P>
-                        <img src="img/pickle.png">
+                        <img src="img/pickle.png" style="margin-left: 70px;">
                     </div>
                 </div>
                 <div data-aos="fade-down" class="ingdiv">
                     <div data-aos="fade-down" id="hem_chi_yang" class="card" style="float: left;">
                         <br>
                         <P>감자 샐러드</P>
-                        <img src="img/potatosalad.png">
+                        <img src="img/potatosalad.png" style="margin-left: 70px;">
                     </div>
                     <div data-aos="fade-down" id="hem_chi_yang" class="card" style="float: right;">
                         <br>
                         <P>딸기잼</P>
-                        <img src="img/strawberry_jam.png">
+                        <img src="img/strawberry_jam.png" style="margin-left: 70px;">
                     </div>
                 </div>
                 <div data-aos="fade-down" class="ingdiv">
                     <div data-aos="fade-down" id="hem_chi_yang" class="card" style="float: left;">
                         <br>
                         <P>케찹</P>
-                        <img src="img/ketchup.png">
+                        <img src="img/ketchup.png" style="margin-left: 70px;">
                     </div>
                     <div data-aos="fade-down" id="hem_chi_yang" class="card" style="float: right;">
                         <br>
                         <P>마요네즈</P>
-                        <img src="img/mayonnaise.png" style="height: 500px; width: 50%;">
+                        <img src="img/mayonnaise.png" style="margin-left: 70px;">
                     </div>
                 </div>
                 <h2 data-aos="fade-down" id="menu_title_card">메뉴판</h2>
                 <div data-aos="fade-down" class="ingdiv">
                     <div data-aos="fade-down" id="hem_chi_yang" class="card" style="float: left;">
                         <br>
-                        <img src="img/menu1_Sandwich.png">
+                        <img src="img/menu1_Sandwich.png" style="margin-left: 70px;">
                         <P>햄찌양 샌드위치 </P>
-                        <p>햄 치즈 양배추 토마토 케챱</p>
-                        <p>3300</p>
+                        <p>햄 치즈 양배추 토마토 케찹</p>
+                        <p>3300원</p>
                     </div>
                     <div data-aos="fade-down" id="sweet_bacon" class="card" style="float: right;">
                         <br>
-                        <img src="img/menu2_Sandwich.png">
+                        <img src="img/menu2_Sandwich.png" style="margin-left: 70px;">
                         <P>햄은 집에 샌드위치 </P>
                         <p>햄 치즈 딸기잼 베이컨 샐러드</p>
-                        <p>3400</p>
+                        <p>3400원</p>
                     </div>
                 </div>
                 <div data-aos="fade-down" class="ingdiv">
                     <div data-aos="fade-down" id="sausage" class="card" style="float: left;">
                         <br>
-                        <img src="img/menu3_Sandwich.png">
+                        <img src="img/menu3_Sandwich.png" style="margin-left: 70px;">
                         <P>소피양 샌드위치</P>
                         <p>소시지 피클 마요네즈 양배추 토마토</p>
-                        <p>3600</p>
+                        <p>3600원</p>
                     </div>
                     <div data-aos="fade-down" id="sausage" class="card" style="float: right;">
                         <br>
-                        <img src="img/menu4_Sandwich.png">
+                        <img src="img/menu4_Sandwich.png" style="margin-left: 70px;">
                         <P>뱉지마요 샌드위치</P>
                         <p>베이컨 치즈 적양파 토마토 마요네즈</p>
-                        <p>4100</p>
+                        <p>4100원</p>
                     </div>
                 </div>
                 <div data-aos="fade-down" class="ingdiv">
                     <div data-aos="fade-down" id="sausage" class="card" style="float: left;">
                         <br>
-                        <img src="img/menu5_Sandwich.png">
+                        <img src="img/menu5_Sandwich.png" style="margin-left: 70px;">
                         <P>햄양 피나요 샌드위치</P>
-                        <p>햄 양배추 샐러드 피클 케챱</p>
-                        <p>2900</p>
+                        <p>햄 양배추 샐러드 피클 케찹</p>
+                        <p>2900원</p>
                     </div>
                     <div data-aos="fade-down" id="sausage" class="card" style="float: right;">
                         <br>
-                        <img src="img/menu6_Sandwich.png">
+                        <img src="img/menu6_Sandwich.png" style="margin-left: 70px;">
                         <P>햄찌양과 토마 샌드위치</P>
                         <p>햄 치즈 양배추 토마토 마요네즈 베이컨 적양파 피클 샐러드</p>
-                        <p>4500</p>
+                        <p>4500원</p>
                     </div>
                 </div>
                 <div data-aos="fade-down" class="ingdiv">
                     <div data-aos="fade-down" id="sausage" class="card" style="margin: auto 0;">
                         <br>
-                        <img src="img/menu7_Sandwich.png">
+                        <img src="img/menu7_Sandwich.png" style="margin-left: 70px;">
                         <P>토치마요 샌드위치</P>
                         <p>치킨 토마토 양배추 마요네즈</p>
-                        <p>3700</p>
+                        <p>3700원</p>
                     </div>
                 </div>
                 <div  data-aos="fade-down" class="card">
-                    <h2 style="font-size: 30px; color: black;" id="menu_title_card"> 개발 김민정 김미나</h2>
+                    <h2 style="font-size: 30px; color: black; margin-bottom: 10px; margin-top: 10px;" id="menu_title_card"> 개발 김민정 김미나</h2>
+                   <div style="font-size: 25px; color: black;">
+                    <p>[ 게임 스토리 ]</p>
+                    <p>
+                        마녀와 함께 살고 있는 고양이들은 오늘도 열심히 일을 했습니다.
+                        <br>
+                        마녀는 고양이들에게 월급을 많이 주지 못했고 
+                        고양이들은 샌드위치가 먹고 싶었습니다.
+                        <br>
+                        하지만 마녀의 집은 너무나 외진곳에 혼자 있었기에, 
+                        샌드위치 가게가 없었습니다. 
+                        <br>
+                        마녀는 안타까운 마음에 고양이들에게 
+                        직접 샌드위치를 만들어 팔게 되었습니다. 
+                        <br>
+                        그럼 이제 고양이들에게 샌드위치를 만들어 주러 가볼까요?</p>
+                        <br>
+                        <br>
+                   </div>
                     <button type="button" onClick="location.href='index.html'">메인 가기</button>
                 </div>
             </div>
+
+            
         </div>
+
+
+        
     </div>
     <script>
     </script>
