--- a/JS_PRO/index.html
+++ b/JS_PRO/index.html
@@ -8,8 +8,11 @@
 
 <body>
 
-    <div>
-        <img id="main_store" src="./img/MainBackground.png">
+    <div id="Main">
+       
+        <img id="main_store" src="./img/mainCat.png" style="width: 780px; height: 300px; margin-top: 300px; margin-left: 100px;">
+
+
         <table class="main_background">
             <tr>
                 <td id="title"><span id="main_title">GIVE ME, MY SAND!</span></td>
@@ -21,6 +24,18 @@
                 <td><button id="main_GameInfo"><a href="GameTutorial.html">게임 방법</a></button> </td>
             </tr>
         </table>
+<!--
+        <div id="cat1">
+            <img src="./img/customer_cat_1.png">
+        </div>
+
+        <div id="cat2">
+            <img src="./img/customer_cat_2.png">
+        </div>
+
+        <div id="cat3">
+            <img src="./img/customer_cat_3.png">
+        </div>-->
     </div>
 
 </body>
